# tci

./: CMakeLists.txt  Makefile.am  Makefile.in  TCIConfig.cmake.in  aclocal.m4  compile_flags.txt  configure  configure.ac  tci.pc.in
cmake/: ax_cmake.m4
include/tci/: barrier.h
tci/: tci_config.h.in
